Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11221

main.events_restart failed in buildbot (Assertion `share == 0' failed in TDC_element::assert_clean_share)

    XMLWordPrintable

Details

    • 10.0.30

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/6181/steps/test_2/logs/stdio

      main.events_restart                      w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2016-10-31 13:03:47
      line
      safe_mutex: Trying to lock unitialized mutex at /home/buildbot/buildbot/build/mariadb-10.1.19/sql/tztime.cc, line 2308
      Attempting backtrace. You can use the following information to find out
      2016-10-31 13:03:44 2973454144 [ERROR] Plugin 'MyISAM' has ref_count=2 after shutdown.
      mysqld: /home/buildbot/buildbot/build/mariadb-10.1.19/sql/table_cache.h:65: void TDC_element::assert_clean_share(): Assertion `share == 0' failed.
      ^ Found warnings in /mnt/buildbot/build/mariadb-10.1.19/mysql-test/var/1/log/mysqld.1.err
      ok
       
       - saving '/mnt/buildbot/build/mariadb-10.1.19/mysql-test/var/1/log/main.events_restart/' to '/mnt/buildbot/build/mariadb-10.1.19/mysql-test/var/log/main.events_restart/'
      
      

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.